# basicOfprogram

./: CMakeLists.txt  main.c
libs/: CMakeLists.txt
libs/algoritms/: CMakeLists.txt  algoritms.c  algoritms.h
libs/algoritms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/algoritm/: algoritms.c  algoritms.h
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/lab_tasks/: lab_tasks.c  lab_tasks.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/unorderd_array_set/: unordered_array_set.c  unordered_array_set.h
libs/data_structures/vector/: vector.c  vector.h
libs/exam/: CMakeLists.txt  exam.c  exam.h
string/tasks/: string.c  string.h
