add_library(data_structures
        bitset/bitset.c
        unorderd_array_set/unordered_array_set.c
        unorderd_array_set/unordered_array_set.h
        vector/vector.h
        vector/vector.c
        matrix/matrix.h
        matrix/matrix.c
        lab_tasks/lab_tasks.c
        lab_tasks/lab_tasks.h
)

